src/TxScriptParser.py
# Generated from TxScript.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class TxScriptParser ( Parser ):

    grammarFileName = "TxScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'contract'", "'{'", "'}'", "'property'", 
                     "'constraint'", "'('", "')'", "'function'", "'payable'", 
                     "'public'", "'external'", "'constructor'", "'int'", 
                     "'immutable'", "';'", "'bool'", "'string'", "'address'", 
                     "'hash'", "'secret'", "'mapping (address => int)'", 
                     "','", "'skip'", "'require'", "'if'", "'else'", "'['", 
                     "']'", "'='", "'!'", "'sha256'", "'length'", "'len'", 
                     "'*'", "'/'", "'%'", "'+'", "'-'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'not'", "'and'", "'&&'", 
                     "'or'", "'||'", "'old'", "'Forall'", "'->'", "'Exists'", 
                     "'rule'", "'implies'", "'forall'", "':'", "'.'", "'exists'", 
                     "'<<'", "'$'", "'>>'", "'method'", "'calldataargs'", 
                     "'true'", "'True'", "'false'", "'False'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "LABEL", "UPPER", "NUMBER", "REAL", "TYPE", 
                      "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_contractExpr = 0
    RULE_propertiesExpr = 1
    RULE_propertyExpr = 2
    RULE_declsExpr = 3
    RULE_declExpr = 4
    RULE_fieldExpr = 5
    RULE_argsExpr = 6
    RULE_argExpr = 7
    RULE_cmdExpr = 8
    RULE_expression = 9
    RULE_qslf = 10
    RULE_rules = 11
    RULE_ruleExpr = 12
    RULE_formulaExpr = 13
    RULE_typeExpr = 14
    RULE_varsFormulaExpr = 15
    RULE_varFormulaExpr = 16
    RULE_argsFormulaExpr = 17
    RULE_argFormulaExpr = 18
    RULE_constantExpr = 19

    ruleNames =  [ "contractExpr", "propertiesExpr", "propertyExpr", "declsExpr", 
                   "declExpr", "fieldExpr", "argsExpr", "argExpr", "cmdExpr", 
                   "expression", "qslf", "rules", "ruleExpr", "formulaExpr", 
                   "typeExpr", "varsFormulaExpr", "varFormulaExpr", "argsFormulaExpr", 
                   "argFormulaExpr", "constantExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    LABEL=69
    UPPER=70
    NUMBER=71
    REAL=72
    TYPE=73
    WS=74
    COMMENT=75
    LINE_COMMENT=76

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ContractExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.decl = None # DeclsExprContext
            self.properties = None # RulesContext

        def UPPER(self):
            return self.getToken(TxScriptParser.UPPER, 0)

        def declsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.DeclsExprContext,0)


        def rules(self):
            return self.getTypedRuleContext(TxScriptParser.RulesContext,0)


        def getRuleIndex(self):
            return TxScriptParser.RULE_contractExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContractExpr" ):
                listener.enterContractExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContractExpr" ):
                listener.exitContractExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContractExpr" ):
                return visitor.visitContractExpr(self)
            else:
                return visitor.visitChildren(self)




    def contractExpr(self):

        localctx = TxScriptParser.ContractExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_contractExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(TxScriptParser.T__0)
            self.state = 41
            localctx.name = self.match(TxScriptParser.UPPER)
            self.state = 42
            self.match(TxScriptParser.T__1)
            self.state = 43
            localctx.decl = self.declsExpr()
            self.state = 44
            self.match(TxScriptParser.T__2)
            self.state = 45
            localctx.properties = self.rules()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PropertiesExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def propertyExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.PropertyExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.PropertyExprContext,i)


        def getRuleIndex(self):
            return TxScriptParser.RULE_propertiesExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertiesExpr" ):
                listener.enterPropertiesExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertiesExpr" ):
                listener.exitPropertiesExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertiesExpr" ):
                return visitor.visitPropertiesExpr(self)
            else:
                return visitor.visitChildren(self)




    def propertiesExpr(self):

        localctx = TxScriptParser.PropertiesExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_propertiesExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TxScriptParser.T__3:
                self.state = 47
                self.propertyExpr()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PropertyExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.phi = None # QslfContext

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)

        def qslf(self):
            return self.getTypedRuleContext(TxScriptParser.QslfContext,0)


        def getRuleIndex(self):
            return TxScriptParser.RULE_propertyExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertyExpr" ):
                listener.enterPropertyExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertyExpr" ):
                listener.exitPropertyExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyExpr" ):
                return visitor.visitPropertyExpr(self)
            else:
                return visitor.visitChildren(self)




    def propertyExpr(self):

        localctx = TxScriptParser.PropertyExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_propertyExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(TxScriptParser.T__3)
            self.state = 54
            localctx.name = self.match(TxScriptParser.LABEL)
            self.state = 55
            self.match(TxScriptParser.T__1)
            self.state = 56
            localctx.phi = self.qslf()
            self.state = 57
            self.match(TxScriptParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclsExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.DeclExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.DeclExprContext,i)


        def getRuleIndex(self):
            return TxScriptParser.RULE_declsExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclsExpr" ):
                listener.enterDeclsExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclsExpr" ):
                listener.exitDeclsExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclsExpr" ):
                return visitor.visitDeclsExpr(self)
            else:
                return visitor.visitChildren(self)




    def declsExpr(self):

        localctx = TxScriptParser.DeclsExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declsExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                self.declExpr()
                self.state = 62 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TxScriptParser.T__4) | (1 << TxScriptParser.T__7) | (1 << TxScriptParser.T__11) | (1 << TxScriptParser.T__12) | (1 << TxScriptParser.T__15) | (1 << TxScriptParser.T__16) | (1 << TxScriptParser.T__17) | (1 << TxScriptParser.T__18) | (1 << TxScriptParser.T__19) | (1 << TxScriptParser.T__20))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TxScriptParser.RULE_declExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ConstrDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.name = None # Token
            self.args = None # ArgsExprContext
            self.cmds = None # CmdExprContext
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)
        def argsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.ArgsExprContext,0)

        def cmdExpr(self):
            return self.getTypedRuleContext(TxScriptParser.CmdExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstrDecl" ):
                listener.enterConstrDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstrDecl" ):
                listener.exitConstrDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstrDecl" ):
                return visitor.visitConstrDecl(self)
            else:
                return visitor.visitChildren(self)


    class NonPayableFunDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.name = None # Token
            self.args = None # ArgsExprContext
            self.cmds = None # CmdExprContext
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)
        def argsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.ArgsExprContext,0)

        def cmdExpr(self):
            return self.getTypedRuleContext(TxScriptParser.CmdExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNonPayableFunDecl" ):
                listener.enterNonPayableFunDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNonPayableFunDecl" ):
                listener.exitNonPayableFunDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNonPayableFunDecl" ):
                return visitor.visitNonPayableFunDecl(self)
            else:
                return visitor.visitChildren(self)


    class NonPayableConstructorDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.args = None # ArgsExprContext
            self.cmds = None # CmdExprContext
            self.copyFrom(ctx)

        def argsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.ArgsExprContext,0)

        def cmdExpr(self):
            return self.getTypedRuleContext(TxScriptParser.CmdExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNonPayableConstructorDecl" ):
                listener.enterNonPayableConstructorDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNonPayableConstructorDecl" ):
                listener.exitNonPayableConstructorDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNonPayableConstructorDecl" ):
                return visitor.visitNonPayableConstructorDecl(self)
            else:
                return visitor.visitChildren(self)


    class FieldDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.child = None # FieldExprContext
            self.copyFrom(ctx)

        def fieldExpr(self):
            return self.getTypedRuleContext(TxScriptParser.FieldExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFieldDecl" ):
                listener.enterFieldDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFieldDecl" ):
                listener.exitFieldDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldDecl" ):
                return visitor.visitFieldDecl(self)
            else:
                return visitor.visitChildren(self)


    class PayableConstructorDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.args = None # ArgsExprContext
            self.cmds = None # CmdExprContext
            self.copyFrom(ctx)

        def argsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.ArgsExprContext,0)

        def cmdExpr(self):
            return self.getTypedRuleContext(TxScriptParser.CmdExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPayableConstructorDecl" ):
                listener.enterPayableConstructorDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPayableConstructorDecl" ):
                listener.exitPayableConstructorDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPayableConstructorDecl" ):
                return visitor.visitPayableConstructorDecl(self)
            else:
                return visitor.visitChildren(self)


    class PayableFunDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.name = None # Token
            self.args = None # ArgsExprContext
            self.cmds = None # CmdExprContext
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)
        def argsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.ArgsExprContext,0)

        def cmdExpr(self):
            return self.getTypedRuleContext(TxScriptParser.CmdExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPayableFunDecl" ):
                listener.enterPayableFunDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPayableFunDecl" ):
                listener.exitPayableFunDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPayableFunDecl" ):
                return visitor.visitPayableFunDecl(self)
            else:
                return visitor.visitChildren(self)



    def declExpr(self):

        localctx = TxScriptParser.DeclExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declExpr)
        self._la = 0 # Token type
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = TxScriptParser.FieldDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                localctx.child = self.fieldExpr()
                pass

            elif la_ == 2:
                localctx = TxScriptParser.ConstrDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.match(TxScriptParser.T__4)
                self.state = 66
                localctx.name = self.match(TxScriptParser.LABEL)
                self.state = 67
                self.match(TxScriptParser.T__5)
                self.state = 68
                localctx.args = self.argsExpr()
                self.state = 69
                self.match(TxScriptParser.T__6)
                self.state = 70
                self.match(TxScriptParser.T__1)
                self.state = 71
                localctx.cmds = self.cmdExpr(0)
                self.state = 72
                self.match(TxScriptParser.T__2)
                pass

            elif la_ == 3:
                localctx = TxScriptParser.PayableFunDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.match(TxScriptParser.T__7)
                self.state = 75
                localctx.name = self.match(TxScriptParser.LABEL)
                self.state = 76
                self.match(TxScriptParser.T__5)
                self.state = 77
                localctx.args = self.argsExpr()
                self.state = 78
                self.match(TxScriptParser.T__6)
                self.state = 79
                self.match(TxScriptParser.T__8)
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TxScriptParser.T__9:
                    self.state = 80
                    self.match(TxScriptParser.T__9)


                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TxScriptParser.T__10:
                    self.state = 83
                    self.match(TxScriptParser.T__10)


                self.state = 86
                self.match(TxScriptParser.T__1)
                self.state = 87
                localctx.cmds = self.cmdExpr(0)
                self.state = 88
                self.match(TxScriptParser.T__2)
                pass

            elif la_ == 4:
                localctx = TxScriptParser.NonPayableFunDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.match(TxScriptParser.T__7)
                self.state = 91
                localctx.name = self.match(TxScriptParser.LABEL)
                self.state = 92
                self.match(TxScriptParser.T__5)
                self.state = 93
                localctx.args = self.argsExpr()
                self.state = 94
                self.match(TxScriptParser.T__6)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TxScriptParser.T__9:
                    self.state = 95
                    self.match(TxScriptParser.T__9)


                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TxScriptParser.T__10:
                    self.state = 98
                    self.match(TxScriptParser.T__10)


                self.state = 101
                self.match(TxScriptParser.T__1)
                self.state = 102
                localctx.cmds = self.cmdExpr(0)
                self.state = 103
                self.match(TxScriptParser.T__2)
                pass

            elif la_ == 5:
                localctx = TxScriptParser.PayableConstructorDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 105
                self.match(TxScriptParser.T__11)
                self.state = 106
                self.match(TxScriptParser.T__5)
                self.state = 107
                localctx.args = self.argsExpr()
                self.state = 108
                self.match(TxScriptParser.T__6)
                self.state = 109
                self.match(TxScriptParser.T__8)
                self.state = 110
                self.match(TxScriptParser.T__1)
                self.state = 111
                localctx.cmds = self.cmdExpr(0)
                self.state = 112
                self.match(TxScriptParser.T__2)
                pass

            elif la_ == 6:
                localctx = TxScriptParser.NonPayableConstructorDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 114
                self.match(TxScriptParser.T__11)
                self.state = 115
                self.match(TxScriptParser.T__5)
                self.state = 116
                localctx.args = self.argsExpr()
                self.state = 117
                self.match(TxScriptParser.T__6)
                self.state = 118
                self.match(TxScriptParser.T__1)
                self.state = 119
                localctx.cmds = self.cmdExpr(0)
                self.state = 120
                self.match(TxScriptParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FieldExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TxScriptParser.RULE_fieldExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class HashDeclContext(FieldExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FieldExprContext
            super().__init__(parser)
            self.const = None # Token
            self.var = None # Token
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHashDecl" ):
                listener.enterHashDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHashDecl" ):
                listener.exitHashDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHashDecl" ):
                return visitor.visitHashDecl(self)
            else:
                return visitor.visitChildren(self)


    class BoolDeclContext(FieldExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FieldExprContext
            super().__init__(parser)
            self.const = None # Token
            self.var = None # Token
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolDecl" ):
                listener.enterBoolDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolDecl" ):
                listener.exitBoolDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolDecl" ):
                return visitor.visitBoolDecl(self)
            else:
                return visitor.visitChildren(self)


    class AddrDeclContext(FieldExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FieldExprContext
            super().__init__(parser)
            self.const = None # Token
            self.var = None # Token
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddrDecl" ):
                listener.enterAddrDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddrDecl" ):
                listener.exitAddrDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddrDecl" ):
                return visitor.visitAddrDecl(self)
            else:
                return visitor.visitChildren(self)


    class StrDeclContext(FieldExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.FieldExprContext
            super().__init__(parser)
            self.const = None # Token
            self.var = None # Token
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStrDecl" ):
                listener.enterStrDecl(self)
